SERVER-13767 add special case NaN handling in matcher and index bounds builder